@@ -26,12 +26,12 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>33.0.0</version>
+			<version>34.3.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-treasury-base</artifactId>
-			<version>9.5.8</version>
+			<version>9.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
